--- a/index.html
+++ b/index.html
@@ -37,31 +37,17 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
-        console.log("Verificando Telegram...");
-        
-        if (typeof window.Telegram === "undefined") {
-            console.error("❌ Telegram WebApp no está disponible.");
-            document.body.innerHTML = "<h1 style='color: red;'>❌ Telegram WebApp no está cargando.</h1>";
-            return;
+        function getQueryParam(param) {
+            let params = new URLSearchParams(window.location.search);
+            return params.get(param);
         }
 
-        let tg = window.Telegram.WebApp;
-        if (!tg) {
-            console.error("❌ window.Telegram.WebApp es undefined.");
-            document.body.innerHTML = "<h1 style='color: red;'>❌ WebApp no está definida.</h1>";
-            return;
-        }
+        let userId = getQueryParam("tgWebAppData");
 
-        tg.expand();
-        console.log("✅ Datos de Telegram WebApp:", tg);
-
-        let user = tg.initDataUnsafe?.user;
-        console.log("🔍 Datos del usuario:", user);
-
-        if (user) {
-            document.getElementById("user-info").innerText = `Hola, ${user.first_name}!`;
+        if (userId) {
+            document.getElementById("user-info").innerText = `Hola, usuario ${userId}!`;
         } else {
-            document.getElementById("user-info").innerText = "❌ No se pudo obtener el usuario.";
+            document.body.innerHTML = "<h1 style='color: red;'>❌ No se pudo obtener el usuario.</h1>";
         }
     });
 </script>
